--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ environment:
 dependencies:
   google_fonts: ^3.0.1
   carousel_slider: ^4.1.1
+  fluttertoast: ^8.0.9
   flutter:
     sdk: flutter
 
