--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   google_fonts: ^3.0.1
   carousel_slider: ^4.1.1
   fluttertoast: ^8.0.9
+  shimmer: ^2.0.0
   flutter:
     sdk: flutter
 
